--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,11 @@ logging.level.io.jmix.core.AccessLogger = debug
 
 # 'debug' level logs all Jmix debug output
 logging.level.io.jmix = info
+
+spring.mail.host=localhost
+spring.mail.port=2500
+jmix.email.from-address=test@training.com
+
+jmix.email.use-file-storage=true
+
+jmix.email.email-sending-cron=*/5 * * * * ?
