--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,12 @@ dependencies {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
     testImplementation 'io.jmix.flowui:jmix-flowui-test-assist'
+    implementation 'io.jmix.email:jmix-email-flowui-starter'
+    implementation 'io.jmix.email:jmix-email-starter'
+    implementation 'io.jmix.jmxconsole:jmix-jmxconsole-starter'
+    implementation 'io.jmix.quartz:jmix-quartz-starter'
+    implementation 'io.jmix.quartz:jmix-quartz-flowui-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
 }
 
 test {
